# numeric_rust

./: Cargo.toml  README.md  plan.md
crates/benchmarks_criterion/: Cargo.toml
crates/benchmarks_criterion/benches/: ivp.rs  vector_add.rs
crates/benchmarks_gungraun/: Cargo.toml
crates/benchmarks_gungraun/benches/: vector_add.rs
crates/ivp/: Cargo.toml  README.md  notes.md
crates/ivp/src/: integrator.rs  lib.rs  main.rs  problem.rs  system.rs
crates/ivp/src/adaptive_strategy/: adaptive_step.rs  constant_step.rs  integral_controller.rs  mod.rs  proportional_integral_controller.rs
crates/ivp/src/step_algorithm/: euler.rs  mod.rs  rosenbrock23.rs  tsit5.rs
crates/ivp_examples/: Cargo.toml
crates/ivp_examples/src/: lib.rs  lotka_volterra.rs  pleiades.rs  rober.rs
crates/my_linalg/: Cargo.toml
crates/my_linalg/src/: lib.rs  vector_add.rs
